--- a/index.html
+++ b/index.html
@@ -36,6 +36,112 @@
           <p class="failers-list"><i class="fa-solid fa-check"></i>  contrary to popular belief is not</p>
         </div>
       </section>
+      <section class="my-plans">
+        <h1>My plans</h1>
+        <div class="plans-con-main">
+          <div class="plan-con">
+            <img src="images/web.png" alt="">
+            <h4>Web development</h4>
+            <p>i want to start</p>
+          </div>
+          <div class="plan-con">
+            <img src="images/js.png" alt="">
+            <h4>Javascript</h4>
+            <p>i want to learn</p>
+          </div>
+          <div class="plan-con">
+            <img src="images/smoke.png" alt="">
+            <h4>Smoking habit</h4>
+            <p>i want to end</p>
+          </div>
+          <div class="plan-con">
+            <img src="images/ecom.png" alt="">
+            <h4>Ecommerce</h4>
+            <p>i want to develop</p>
+          </div>
+        </div>
+      </section>
+      <section class="always-keep">
+        <h1>Always keep positive</h1>
+        <h1>Mindset</h1>
+        <button class="always-btn">call now</button>
+      </section>
+       <!-- resume section------------------- -->
+       <section class="resume">
+        <h3 class="section-title">
+            A summary of My Resume
+        </h3>
+        <div class="resume-content">
+            <div>
+                <h3 class="resume-title">my education</h3>
+                <div class="resume-items">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-items">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-items">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div> 
+            </div>
+            <div>
+                <h3 class="resume-title">my experience</h3>
+                <div class="resume-items">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-items">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-items">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </div> 
+    </section>
     </main>
+    <footer class="footer">
+      <div class="footer-con-main">
+        <div class="f-con-one">
+          <h1>Future</h1>
+          <p>Loremsit amet, consectetur adipisicing elit.  adipisicing elit. Incidunt, quis. sit amet, consectetur adipisicing sit amet, consectetur adipisicing elit. elit. </p>
+          <p>email: info@gmail.com</p>
+          <p>phone: 0150000000</p>
+          <div class="footer-img">
+            <img src="images/fb.png" alt="">
+            <img src="images/twitter.png" alt="">
+            <img src="images/youtube.png" alt="">
+          </div>
+        </div>
+        <div class="footer-btn">
+          <h4>subscribe</h4>
+         <div>
+          <button class="btn-primary">Enter your email</button>
+          <button class="btn-secondary">subscribe</button>
+         </div>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
